Changed UpdatePrizes to accept multiple values fromrequest body, added error messages to responses
